--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.0.3",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.292.0",
     "next": "^15.4.1",
     "next-auth": "^4.24.11",
